# vulkan-triangle-sdl-slang

./: .gitignore  CMakeLists.txt  README.md
shaders/: compile.sh
shaders/src/: triangle.slang
src/: main.cpp  renderer.cpp  renderer.h  shaders  util.h
